resources/drafts/keycloak/keycloak-chart.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keycloak
